dataset/local/tf_ec2_auto_scaling_groups/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_autoscaling_group
        values:
          launch_template:
            - {}
          launch_configuration: null
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_autoscaling_group
        values:
          launch_configuration: "test-lc"
