dataset/local/tf_ec2_auto_scaling_groups/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-ec2-auto-scaling-groups
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-ec2-auto-scaling-groups
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-ec2-auto-scaling-groups
    kind: Plan
    resources:
      - bad-plan
    result: fail
